--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div id="errorMsg" style="color:red;"></div>
     <button type="submit">Login</button>
-    <button onclick="window.location.href='file.html'">Daftar</button>
+    <button onclick="window.location.href='register.html'">Daftar</button>
   </form>
 
   <script>
